# tink-test

./: .gitignore  README.md  pyproject.toml
.github/scripts/: run_android_appium.sh  run_android_appium_suite.sh
.github/workflows/: e2e.yml
api/: __init__.py  tink_api.py
appium_client/: __init__.py  driver.py  haircut_page.py  merriam_page.py  step_screenshots.py  time_page.py  weight_page.py
features/android/: haircut_e2e.feature  haircut_mock.feature  merriam_e2e.feature  merriam_mock.feature  time_e2e.feature  time_mock.feature  weight_e2e.feature  weight_mock.feature
features/api/: book.feature  haircut.feature  merriam.feature  root.feature  story.feature  time.feature  weight.feature  zi.feature
fixtures/android/haircut/: history.json
fixtures/android/merriam/: progress.json
fixtures/android/time/: mixed.json
fixtures/android/weight/: history.json  latest.json  trend.json
mock_server/: __init__.py  haircut_server.py  merriam_server.py  time_server.py  weight_server.py
scripts/: embed_android_screenshots.py  run_android_appium_local.sh
tests/: conftest.py
tests/android/: conftest.py  test_haircut_e2e.py  test_haircut_mock.py  test_merriam_e2e.py  test_merriam_mock.py  test_time_e2e.py  test_time_mock.py  test_weight_e2e.py  test_weight_mock.py
tests/api/: test_book.py  test_haircut.py  test_merriam.py  test_root.py  test_story.py  test_time.py  test_weight.py  test_zi.py
